--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "typescript": "^3.7.5",
     "web3": "^1.0.0-beta.26"
   },
   "scripts": {
